--- a/sequelize/package.json
+++ b/sequelize/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cd ./src && sequelize db:seed:all -- --env development && cd .. && nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:prod": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
